# bt4vt

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
.ipynb_checkpoints/: setup-checkpoint.py
bt4vt/: __init__.py  core.py  dataio.py  dataset_evaluate.py  evaluate.py  groups.py  metrics.py  parked_functions.py  plot.py  utils.py  voxceleb.py
bt4vt/data/: config.yaml
docs/source/: conf.py  core.rst  dataio.rst  evaluate.rst  example.rst  groups.rst  index.rst  install.rst  intro.rst  metrics.rst  plot.rst  requirements.txt  voxceleb.rst
example/: config.yaml  vox1_meta.csv
sveva/: evaluate.py  plot.py  voxceleb.py
sveva/.ipynb_checkpoints/: evaluate-checkpoint.py  plot-checkpoint.py  voxceleb-checkpoint.py
sveva_fair/: evaluate.py  plot.py  voxceleb.py
test/complex_tests/: config_1b.yaml  config_2.yaml  scores_1b.csv  test_1b.csv
test/configfile_tests/: config_2a.yaml  config_4.yaml  config_5a.yaml
test/metadata_tests/: config_1.yaml  config_4.yaml  config_5.yaml  config_6.yaml  scores_4.csv  test_2.csv
test/scoresfile_tests/: config_1a.yaml  config_1c.yaml  config_3a.yaml  config_3c.yaml  config_4.yaml  scores_1a.csv  scores_1c.csv  scores_3a.csv
tests/: test_complex_combinations.py  test_config_input.py  test_metadata_input.py  test_scores_input.py
tests/complex_tests/: config_1a.yaml  config_1b.yaml  config_2.yaml  config_3.yaml  test_3.csv
tests/configfile_tests/: config_1.yaml  config_2a.yaml  config_2b.yaml  config_2c.yaml  config_3.yaml  config_4.yaml  (+5 more)
(+38 files in other folders)
