[metadata]
name = bt4vt
version = 1.0.0
author = Wiebke Toussaint, Anna Leschanowsky
author_email = w.toussaint@tudelft.nl
description= Bias Tests for Voice Technologies
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/wiebket/bt4vt
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English

[options]
include_package_data = True
install_requires =
    numpy
    pandas
    PyYAML
    scikit_learn
    scipy
    setuptools
    importlib.resources

[options.extras_require]
dev =
    flake8
    pytest
    pytest-cov

[options.package_data]
bt4vt = data/config.yaml, data/*.csv


